squirrel_lang/src/snapshots/squirrel_lang__lexer__tests__lexer-verify-metamethods-classes.nut.snap
---
source: squirrel_lang/src/lexer.rs
expression: Lexer test for verify/metamethods/classes.nut
---
[]
