squirrel_lang/src/snapshots/squirrel_lang__lexer__tests__lexer-verify-statements-loops.nut.snap
---
source: squirrel_lang/src/lexer.rs
expression: Lexer test for verify/statements/loops.nut
---
- DoubleColon
- Identifier: print
- LeftParenthesis
- String: "2.4.3 Loops\n"
- RightParenthesis
- Newline
- DoubleColon
- Identifier: print
- LeftParenthesis
- String: "2.4.3.1 For Loop\n"
- RightParenthesis
- Newline
- DoubleColon
- Identifier: print
- LeftParenthesis
- String: " - For loop with inline local index\n"
- RightParenthesis
- Newline
- For
- LeftParenthesis
- Local
- Identifier: a
- Assign
- Integer: 0
- Semicolon
- Identifier: a
- LessThan
- Integer: 5
- Semicolon
- Identifier: a
- PlusAssign
- Integer: 1
- RightParenthesis
- Newline
- Identifier: print
- LeftParenthesis
- Identifier: a
- Plus
- String: " "
- RightParenthesis
- Semicolon
- Newline
- DoubleColon
- Identifier: print
- LeftParenthesis
- String: "\n"
- RightParenthesis
- Newline
- DoubleColon
- Identifier: print
- LeftParenthesis
- String: " - For loop with env index\n"
- RightParenthesis
- Newline
- Identifier: glob
- NewSlot
- "Null"
- Newline
- For
- LeftParenthesis
- Identifier: glob
- Assign
- Integer: 0
- Semicolon
- Identifier: glob
- LessThan
- Integer: 5
- Semicolon
- Identifier: glob
- PlusAssign
- Integer: 1
- RightParenthesis
- LeftCurlyBrace
- Newline
- Identifier: print
- LeftParenthesis
- Identifier: glob
- Plus
- String: " "
- RightParenthesis
- Semicolon
- Newline
- RightCurlyBrace
- Newline
- DoubleColon
- Identifier: print
- LeftParenthesis
- String: "\n"
- RightParenthesis
- Newline
- Newline
- DoubleColon
- Identifier: print
- LeftParenthesis
- String: " - Infinite For loop with break\n"
- RightParenthesis
- Newline
- Local
- Identifier: counter
- Assign
- Integer: 0
- Newline
- For
- LeftParenthesis
- Semicolon
- Semicolon
- RightParenthesis
- LeftCurlyBrace
- Newline
- If
- LeftParenthesis
- Identifier: counter
- GreaterThan
- Integer: 5
- RightParenthesis
- Break
- Newline
- Identifier: print
- LeftParenthesis
- Identifier: counter
- Plus
- String: " "
- RightParenthesis
- Newline
- Identifier: counter
- Increment
- Newline
- RightCurlyBrace
- Newline
- DoubleColon
- Identifier: print
- LeftParenthesis
- String: "\n"
- RightParenthesis
- Newline
- Newline
- DoubleColon
- Identifier: print
- LeftParenthesis
- String: "2.4.3.2 Foreach Loop\n"
- RightParenthesis
- Newline
- DoubleColon
- Identifier: print
- LeftParenthesis
- String: " - Foreach loop over array with index\n"
- RightParenthesis
- Newline
- Local
- Identifier: a
- Assign
- LeftSquareBracket
- Integer: 10
- Comma
- Integer: 23
- Comma
- Integer: 33
- Comma
- Integer: 41
- Comma
- Integer: 589
- Comma
- Integer: 56
- RightSquareBracket
- Newline
- ForEach
- LeftParenthesis
- Identifier: idx
- Comma
- Identifier: val
- In
- Identifier: a
- RightParenthesis
- Newline
- Identifier: print
- LeftParenthesis
- String: index=
- Plus
- Identifier: idx
- Plus
- String: " value="
- Plus
- Identifier: val
- Plus
- String: "\n"
- RightParenthesis
- Semicolon
- Newline
- Newline
- DoubleColon
- Identifier: print
- LeftParenthesis
- String: " - Foreach loop over array\n"
- RightParenthesis
- Newline
- ForEach
- LeftParenthesis
- Identifier: val
- In
- Identifier: a
- RightParenthesis
- Newline
- Identifier: print
- LeftParenthesis
- String: value=
- Plus
- Identifier: val
- Plus
- String: "\n"
- RightParenthesis
- Semicolon
- Newline
- Newline
- Newline
- Newline
- DoubleColon
- Identifier: print
- LeftParenthesis
- String: " - Foreach loop over object\n"
- RightParenthesis
- Newline
- Local
- Identifier: obj
- Assign
- LeftCurlyBrace
- Identifier: a
- Assign
- Integer: 10
- Comma
- Identifier: b
- Assign
- String: b
- Comma
- Identifier: c
- Assign
- Number: 0.40010000000000007
- RightCurlyBrace
- Newline
- Local
- Identifier: obj_list
- Assign
- LeftSquareBracket
- RightSquareBracket
- Newline
- ForEach
- LeftParenthesis
- Identifier: val
- In
- Identifier: obj
- RightParenthesis
- Newline
- Identifier: obj_list
- Period
- Identifier: push
- LeftParenthesis
- String: value=
- Plus
- Identifier: val
- Plus
- String: "\n"
- RightParenthesis
- Semicolon
- Newline
- Identifier: obj_list
- Period
- Identifier: sort
- LeftParenthesis
- RightParenthesis
- Newline
- ForEach
- LeftParenthesis
- Identifier: val
- In
- Identifier: obj_list
- RightParenthesis
- Newline
- Identifier: print
- LeftParenthesis
- Identifier: val
- RightParenthesis
- Semicolon
- Newline
- Identifier: obj_list
- Period
- Identifier: clear
- LeftParenthesis
- RightParenthesis
- Newline
- Newline
- DoubleColon
- Identifier: print
- LeftParenthesis
- String: " - Foreach loop over object with key\n"
- RightParenthesis
- Newline
- This
- Period
- Identifier: obj
- NewSlot
- LeftCurlyBrace
- RightCurlyBrace
- Newline
- For
- LeftParenthesis
- Local
- Identifier: i
- Assign
- Integer: 10
- Semicolon
- Identifier: i
- GreaterThanEquals
- Integer: 0
- Semicolon
- Identifier: i
- MinusAssign
- Integer: 1
- RightParenthesis
- Newline
- This
- Period
- Identifier: obj
- LeftSquareBracket
- Identifier: i
- Plus
- String: " KEY"
- RightSquareBracket
- NewSlot
- Identifier: i
- Period
- Identifier: tostring
- LeftParenthesis
- RightParenthesis
- Plus
- String: " VAL"
- Newline
- Newline
- ForEach
- LeftParenthesis
- Identifier: key
- Comma
- Identifier: val
- In
- This
- Period
- Identifier: obj
- RightParenthesis
- Newline
- Identifier: obj_list
- Period
- Identifier: push
- LeftParenthesis
- String: key=
- Plus
- Identifier: key
- Plus
- String: " value="
- Plus
- Identifier: val
- Plus
- String: "\n"
- RightParenthesis
- Semicolon
- Newline
- Identifier: obj_list
- Period
- Identifier: sort
- LeftParenthesis
- RightParenthesis
- Newline
- Newline
- ForEach
- LeftParenthesis
- Identifier: val
- In
- Identifier: obj_list
- RightParenthesis
- Newline
- Identifier: print
- LeftParenthesis
- Identifier: val
- RightParenthesis
- Semicolon
